--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,21 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules
 
-# dependencies
-/node_modules
-*/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
+# Output
+.output
+.vercel
+/.svelte-kit
 /build
 
-# misc
+# OS
 .DS_Store
+Thumbs.db
+
+# Env
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+!.env.test
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Mac OS
-.DS_Store
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
